--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,7 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:background="@color/white">
 
+    <View
+        android:layout_width="64dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:contentDescription="TODO"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/signin_placeholder"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+    <LinearLayout
+        android:layout_width="75dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:contentDescription="TODO"
+        android:src="@drawable/settings_icon"/>
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:contentDescription="TODO"
+        android:src="@drawable/login_icon"/>
+    </LinearLayout>
 
 </LinearLayout>
