--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-        android:background="@color/dark_magenta">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/dark_magenta">
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:title="Home"
+            android:title="@string/home_str"
             android:icon="@drawable/home_icon"/>
-
+        <item
+            android:id="@+id/nav_games"
+            android:title="@string/games_str"
+            android:icon="@drawable/games_icon"/>
         <item
             android:id="@+id/nav_history"
-            android:title="History"
+            android:title="@string/history_str"
             android:icon="@drawable/history_icon"/>
+        <item
+            android:id="@+id/nav_about"
+            android:title="@string/about_str"
+            android:icon="@drawable/about_icon"/>
     </group>
 </menu>
