--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,6 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:orientation="vertical"
-
+    android:background="@color/white">
 
 </LinearLayout>
